# dlopen-leaks

./: .gitignore  CMakeLists.txt  main.cpp  plugin.cpp
